fix: Fix Navigation being hidden behind content on scroll

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 0 14rem;
   background-color: #F8F9FA;
+  z-index: 100;
 
   .menu {
     width: 100%;
